@@ -444,3 +444,8 @@ Since 2.2 release, Michael Goffioul <goffioul@imec.be>
   * general: printer filtering specs are now ORed instead of ANDed
   * general: changed "Advanced" to "Driver Settings"
   * CUPS: fixed RIPCache problem, added support for possible suffixes
+
+27/02/2002 Michael Goffioul <goffioul@imec.be>
+  * CUPS: workaround to allow special characters in login/password without
+    breaking security. Possible now to use safely chars like '@' and '/'
+    in login.
